# visset

./: .gitignore  README.MD  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/: dev.py  main.py  prompts.json
src/acervo/: control.py  errors.py  languages.py  models.py  repository.py  service.py  session.py  utils.py  view.py
src/acervo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/visset/: context.py  controllers.py  endpoints.py  errors.py  exception_handler.py  languages.py  models.py  repository.py  service.py  session.py  utils.py  view.py
test/: conftest.py  test_connection.py  test_context.py  test_controller.py  test_language.py  test_model.py  test_repository.py  test_service.py  test_session.py  test_utils.py  test_view.py
