[metadata]
name = acervo
version = 0.0.1
description = archive for media in telegram
author = dafine
license = GNU GPLv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    find:
install_requires =
    mysql-connector-python>=8.0.27
    pytelegrambotapi>=4.1.1
    flask>=2.1.2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox>=3.25.0
    pytest>=7.1.0
    pytest-cov>=3.0.0
    flake8>=4.0.1

[flake8]
ignore = E251, E402, F401, W503
max-line-length = 160